<resources>
    <string name="app_name">EjemploFragmentos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greeting">! Hola, %1$s !</string>
    <string name="question">¿A que logo pertenece la imagen?</string>
    <string name="send_btn_label">Enviar</string>
    <string name="radiobuttontext1">Pertenece a Chery Motors</string>
    <string name="radiobuttonText2">Pertenece a GreatWall</string>
    <string name="radiobuttontext3">Pertenece a Dongfeng</string>
    <string name="radiobuttontext4">Pertenece a Geely</string>
    <string name="try_again_msg">Lo siento te equivocaste %1$s,</string>

    <string name="send_btn">Enviar</string>
   <string name="start_btn">Comenzar</string>
    <string name="tray_again_btn">Vuelve a Intentarlo...</string>
    <string name="win_msg">Felicitaciones %1$s Ganaste !!!</string>
</resources>